--- a/templates/public/layouts/sidebar.html
+++ b/templates/public/layouts/sidebar.html
@@ -24,7 +24,7 @@
                 <script type="text/javascript">
                   writeTimeFormat("{{ p.created_at|escapejs }}");
                 </script>
-                <a class="news-category" href="/{{ p.category.slug }}">An toàn thông tin</a>
+                <a class="news-category" href="/{{ p.category.slug }}">{{ p.category.name }}</a>
               </p>
             </div>
           </li>
