--- a/templates/public/views/auth/login.html
+++ b/templates/public/views/auth/login.html
@@ -23,9 +23,9 @@
       <label for="password">Mật khẩu</label>
       <input placeholder="Mật khẩu" type="password" class="form-control" name="password" id="password">
     </div>
-    {% comment %} <div class="form-group">
-      <a class="btn-forgot-password" href="/doi-mat-khau">Quên mật khẩu</a>
-    </div> {% endcomment %}
+    <div class="form-group">
+      <a class="btn-forgot-password" href="/quen-mat-khau">Quên mật khẩu</a>
+    </div>
     <button type="submit" class="btn-login btn btn-light">Đăng nhập</button>
   </form>
 </div>
