--- a/templates/public/layouts/master_user.html
+++ b/templates/public/layouts/master_user.html
@@ -40,9 +40,52 @@
     </div>
 
     {% include 'public/layouts/footer.html' %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="{% static 'admin/js/jquery.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'admin/js/parsley.min.js' %}"></script>
     <script src="{% static 'admin/js/vi.locale.js' %}"></script>
+    <script>
+      $(document).ready(function () {
+        // Upload profile avatar
+        $('.profile-avatar img.avatar').on('click', function() {
+          $('.profile-avatar input.file-avatar').trigger('click');
+        });
+
+        $('.profile-avatar input.file-avatar').on('change', function() {
+          const [file] = $(this).prop('files');
+          if (!file) return;
+
+          $('.profile-avatar img.avatar').attr('src', URL.createObjectURL(file));
+          $('.btn-update-avatar').removeClass('d-none');
+        })
+        $('.btn-update-avatar').on('click', function() {
+          const [file] = $('.profile-avatar input.file-avatar').prop('files');
+          function done(res) {
+            $('.profile-avatar').before('<div class="text-success">Cập nhật avatar thành công</div>');
+            $('.btn-update-avatar').addClass('d-none');
+            $('.profile-link img').prop('src', res.url);
+            $('.profile-avatar img').prop('src', res.url);
+          }
+          function failure(jqXHR, textStatus, errorThrown) {}
+          const formData = new FormData();
+          formData.append("file", file);
+
+          const url = `/me/update-avatar`;
+          const csrf_token = '{{ csrf_token }}';
+          $.ajaxSetup({
+            headers: { 'X-CSRFToken': csrf_token }
+          });
+          const options = {
+            method: 'POST',
+            data: formData,
+            dataType: 'json',
+            processData: false,
+            contentType: false,
+            url,
+          };
+          $.ajax(options).done(done).fail(failure);
+        })
+      });
+    </script>
   </body>
 </html>
