--- a/templates/public/views/home/home.html
+++ b/templates/public/views/home/home.html
@@ -65,6 +65,110 @@
       {% endfor %}
     </ul>
   </div>
+  <div>
+    <div class="news-group-title mt-4">Công nghệ thông tin</div>
+    <ul class="news-list">
+      {% for p in cntt_posts %}
+      <li class="news-item">
+        <a href="/{{ p.category.slug }}/{{ p.slug }}">
+          <img src="{{ p.thumbnail }}" alt="" />
+        </a>
+        <div>
+          <a href="/{{ p.category.slug }}/{{ p.slug }}">
+            <h2>{{ p.title }}</h2>
+          </a>
+          <p>
+            <a class="news-category" href="/{{ p.category.slug }}">{{ p.category.name }}</a>
+          </p>
+          <p>
+            <i class="fa-regular fa-clock" aria-hidden="true"></i>
+            <script type="text/javascript">
+              writeTimeFormat("{{ p.created_at|escapejs }}");
+            </script>
+          </p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+  <div>
+    <div class="news-group-title mt-4">An toàn thông tin</div>
+    <ul class="news-list">
+      {% for p in attt_posts %}
+      <li class="news-item">
+        <a href="/{{ p.category.slug }}/{{ p.slug }}">
+          <img src="{{ p.thumbnail }}" alt="" />
+        </a>
+        <div>
+          <a href="/{{ p.category.slug }}/{{ p.slug }}">
+            <h2>{{ p.title }}</h2>
+          </a>
+          <p>
+            <a class="news-category" href="/{{ p.category.slug }}">{{ p.category.name }}</a>
+          </p>
+          <p>
+            <i class="fa-regular fa-clock" aria-hidden="true"></i>
+            <script type="text/javascript">
+              writeTimeFormat("{{ p.created_at|escapejs }}");
+            </script>
+          </p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+  <div>
+    <div class="news-group-title mt-4">An ninh quốc phòng</div>
+    <ul class="news-list">
+      {% for p in anqp_posts %}
+      <li class="news-item">
+        <a href="/{{ p.category.slug }}/{{ p.slug }}">
+          <img src="{{ p.thumbnail }}" alt="" />
+        </a>
+        <div>
+          <a href="/{{ p.category.slug }}/{{ p.slug }}">
+            <h2>{{ p.title }}</h2>
+          </a>
+          <p>
+            <a class="news-category" href="/{{ p.category.slug }}">{{ p.category.name }}</a>
+          </p>
+          <p>
+            <i class="fa-regular fa-clock" aria-hidden="true"></i>
+            <script type="text/javascript">
+              writeTimeFormat("{{ p.created_at|escapejs }}");
+            </script>
+          </p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+  <div>
+    <div class="news-group-title mt-4">Chính trị xã hội</div>
+    <ul class="news-list">
+      {% for p in ctxh_posts %}
+      <li class="news-item">
+        <a href="/{{ p.category.slug }}/{{ p.slug }}">
+          <img src="{{ p.thumbnail }}" alt="" />
+        </a>
+        <div>
+          <a href="/{{ p.category.slug }}/{{ p.slug }}">
+            <h2>{{ p.title }}</h2>
+          </a>
+          <p>
+            <a class="news-category" href="/{{ p.category.slug }}">{{ p.category.name }}</a>
+          </p>
+          <p>
+            <i class="fa-regular fa-clock" aria-hidden="true"></i>
+            <script type="text/javascript">
+              writeTimeFormat("{{ p.created_at|escapejs }}");
+            </script>
+          </p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
 <div class="p-0 pl-3" style="width: 20.83%">
   <div class="news-group-title">Tin mới</div>
