--- a/templates/public/layouts/sidebar.html
+++ b/templates/public/layouts/sidebar.html
@@ -1,4 +1,4 @@
-<div class="p-0 pl-2" style="width: 29.17%">
+<div class="p-0 pl-2 content-interested">
   <div class="news-group-title">Tin được quan tâm</div>
   <div
     id="interested-slide"
