--- a/templates/public/views/home/home.html
+++ b/templates/public/views/home/home.html
@@ -1,5 +1,5 @@
 {% extends 'public/layouts/master.html' %} {% block body %}
-<div class="" style="width: 50%">
+<div class="content-main">
   <div
     id="main-slide"
     class="carousel slide"
@@ -170,7 +170,7 @@
     </ul>
   </div>
 </div>
-<div class="p-0 pl-3" style="width: 20.83%">
+<div class="p-0 pl-3 content-recent">
   <div class="news-group-title">Tin mới</div>
   <ul>
     {% for p in recent_posts %}
