--- a/templates/public/layouts/master_user.html
+++ b/templates/public/layouts/master_user.html
@@ -44,6 +44,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'admin/js/parsley.min.js' %}"></script>
     <script src="{% static 'admin/js/vi.locale.js' %}"></script>
+    <script src="{% static 'admin/js/script.js' %}"></script>
     <script>
       $(document).ready(function () {
         // Upload profile avatar
