--- a/templates/public/views/tag/tag.html
+++ b/templates/public/views/tag/tag.html
@@ -1,5 +1,5 @@
 {% extends 'public/layouts/master.html' %} {% block body %}
-<div class="" style="width: 70.83%">
+<div class="content-search">
   <div class="news-group-title news-category-title">
     {{ tag.name }}
   </div>
