--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -472,6 +472,27 @@ body {
 .close-menu {
   display: none;
 }
+.view-more:hover {
+  background: #cc0000;
+  color: #fff;
+  border: 1px solid #cc0000;
+  text-decoration: none;
+}
+.view-more {
+  text-decoration: none;
+  display: block;
+  background: #e1e1e1;
+  border: 1px solid #d1d1d1;
+  color: #333;
+  font-size: 16px;
+  line-height: 45px;
+  height: 45px;
+  border-radius: 2px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 12px;
+}
 /* Responsive menu */
 @media only screen and (max-width: 1024px) {
   .top-header {
