--- a/templates/public/views/category/category.html
+++ b/templates/public/views/category/category.html
@@ -26,7 +26,11 @@
       {% endfor %}
     </ul>
     {% else %}
-    <p>Chưa có bài viết nào.</p>
+    <p>Không có bài viết nào.</p>
+    {% endif %}
+
+    {% if has_next %}
+    <a href="/{{category.slug}}/{{ page|add:'1' }}" class="view-more">Xem thêm</a>
     {% endif %}
   </div>
 </div>
