--- a/templates/public/views/search/search.html
+++ b/templates/public/views/search/search.html
@@ -29,7 +29,10 @@
       {% endfor %}
     </ul>
     {% else %}
-    <p>Không tìm thấy bài viết nào.</p>
+    <p>Không có bài viết.</p>
+    {% endif %}
+    {% if has_next %}
+    <a href="/tim-kiem/{{ page|add:'1' }}?q={{q}}" class="view-more">Xem thêm</a>
     {% endif %}
   </div>
 </div>
